--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   mysql:
     image: mysql:8
     restart: always
-    env_file: ./backend/.env
+    env_file: .env
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
@@ -27,7 +27,7 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    env_file: ./backend/.env
+    env_file: .env
     environment:
       DB_HOST: ${DB_HOST}
       DB_PORT: ${DB_PORT}
@@ -66,7 +66,7 @@ services:
     depends_on:
       backend:
         condition: service_healthy
-    env_file: ./frontend/.env
+    env_file: .env
     environment:
       VITE_API_URL: ${VITE_API_URL}
       PORT: ${FRONTEND_PORT}
